@@ -1,3 +1,8 @@
+2007-08-05  Dmitry Galinsky  <dima.exe@gmail.com>
+
+	* rails-compat.el: apply patch #12743, replace
+	`indent-or-complete` to `indent-and-complete` (thanks Peter Williams)
+
 2007-08-04  Dmitry Galinsky  <dima.exe@gmail.com>
 
 	* rails-navigation.el (rails-nav:goto-layouts): fixed bug #12754,
